# mtrace-sh

./: .cvsignore  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  configure.ac  libmtracesh.c  main.c  mtrace-sh.c  mtrace-sh.h  mtrace-sh.spec.in  syscaller.c  syscaller.h
src/: Makefile.am
src/lib/: Makefile.am  example.c  gcc-compat.h
src/shell/: Makefile.am  mtracesh
